# ScatterLabel

./: .IMPLEMENTATION_PLAN.md.swp  .gitignore  CLAUDE.md  CMR_FRONTEND_UPDATE.md  FRONTEND_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  README.md  convert_embeddings_to_csv.py  download_images_from_gcp.py  embeddings.json  embeddings_with_ids.json  example_usage.py  export_labelled_datasets.py  generate_embeddings.py  main.py  prepare_cmr_annotations.py  pyproject.toml  requirements.txt  sample_and_generate_embeddings.py  start_frontend.sh
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v20-05-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
frontend/scatter-viewer/: IMAGE_SETUP.md  README.md  increase_watchers.sh  package-lock.json  package.json  vite.config.js
frontend/scatter-viewer/src/: App.css  App.jsx
frontend/scatter-viewer/src/components/: ErrorBoundary.jsx  ImageGrid.jsx  ImageGridOptimized.jsx  ScatterPlot.jsx
frontend/scatter-viewer/src/hooks/: useImageLoader.js
